[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/RadialMenu.gd" type="Script" id=1]

[node name="RadialMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.368478
margin_top = 2.94737
margin_right = -424.369
margin_bottom = 2.94739
script = ExtResource( 1 )
outerColor = Color( 0.91608, 1, 0.667969, 1 )
innerColor = Color( 0.533333, 0.992157, 0.388235, 1 )
sections = 6
detailLevel = 3

[node name="HitBox" type="Area2D" parent="."]

[node name="SectionsEdit" type="LineEdit" parent="."]
margin_left = 484.212
margin_top = -1.05264
margin_right = 542.212
margin_bottom = 22.9474
[connection signal="text_entered" from="SectionsEdit" to="." method="_on_SectionsEdit_text_entered"]
